--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,6 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+
+:root {
+  --accent-font: PressStart2P-Regular;
+  --main-font: Inter-Variable;
+}
