--- a/styles/style.css
+++ b/styles/style.css
@@ -75,6 +75,8 @@
 .card__title {
   margin: 3px 10px;
   font-family: var(--main-font);
+  font-size: 18px;
+  font-weight: 700;
   font-variation-settings: 'wght' 700;
 }
 
@@ -136,12 +138,14 @@
 }
 
 .card__text {
+  font-size: 18px;
   font-family: var(--main-font);
   font-weight: 400;
   margin: 0 0 25px;
 }
 
 .card__text--end {
+  font-size: 18px;
   margin-bottom: 0;
 }
 
